--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,38 @@ a {
     margin: 0 auto;
 }
 
+.l-header {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 10px;
+    position: absolute;
+    top: 0px;
+    z-index: 100;
+    align-items: center;
+}
+
+.l-header__icon {
+    border-radius: 50%;
+    background: linear-gradient(to bottom, #105092, #07284b);
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    width: 80px;
+    height: 80px;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+.l-header-icon__line {
+    width: 100%;
+    height: 5px;
+    border-radius: 40px;
+    background-color: #fff;
+}
+
 #hero {
     height: 100vh;
 }
@@ -293,6 +325,10 @@ a {
     position: relative;
 }
 
+#classification .container .cla_group .member:hover .border {
+    background-color: #91d2f2;
+}
+
 .person1 {
     position: absolute;
     top: 0px;
@@ -346,8 +382,13 @@ a {
     color: #0c417d;
 }
 
-.map .content {
+#classification .container .cla_group .small_group .map:hover .content,
+#classification .container .cla_group .small_group .time_schedule:hover .content {
     background-color: #91d2f2;
+}
+
+.map .content {
+    background-color: #fff;
     text-align: center;
     font-size: 120px;
     font-weight: bold;
@@ -357,6 +398,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    border: 5px solid #91d2f2;
     align-items: center;
 }
 
@@ -389,33 +431,42 @@ a {
     background-image: url("../img/dot背景.png");
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
 }
 
 #event .menus {
     width: 100%;
-    padding-inline: 100px;
     display: flex;
+    padding-inline: 100px;
     gap: 10px;
     margin-bottom: 120px;
+    justify-content: center;
 }
 
 #event .menus .menu-item {
+    padding: 4px;
+    flex-wrap: wrap;
     border-radius: 50px;
+    gap: 1px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    width: 270px;
+    text-align: center;
+    width: 217px;
     height: 92px;
+    line-height: 1.1;
+    color: #fff;
+    font-weight: bold;
+    font-size: 25px;
+    position: relative;
     background: linear-gradient(#105092, #07284b);
 }
 
-#event .menus .menu-item img:first-child {
-    width: 96px;
-}
-
-.down {
-    width: 18px;
+#event .menus .menu-item p {
+    position: absolute;
+    bottom: 4px;
 }
 
 #event .container {
@@ -455,7 +506,7 @@ a {
     position: absolute;
     bottom: 0px;
     right: 0px;
-    transform: translate(50%, 50%);
+    transform: translate(50%, 150%);
 }
 
 #event .content {
@@ -505,18 +556,19 @@ a {
     border-radius: 40px;
     text-align: center;
     padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .btn-item:hover {
     background-color: #fff972;
 }
 
-.right {
-    width: 11px;
+.btn-item p {
     position: absolute;
-    right: 0px;
-    top: 0px;
-    transform: translate(-50%, 100%);
+    right: 15px;
+    color: #07284b;
 }
 
 .people {
@@ -531,6 +583,7 @@ a {
     background-image: url("../img/Rectangle\ 1362.png");
     background-size: cover;
     background-repeat: no-repeat;
+    position: relative;
 }
 
 #others .container {
@@ -539,9 +592,10 @@ a {
     flex-wrap: wrap;
     padding-top: 150px;
     padding-bottom: 80px;
+    gap: 80px;
 }
 
-#others .cards-wrapper{
+#others .cards-wrapper {
     display: flex;
     justify-content: space-between;
 }
@@ -556,11 +610,20 @@ a {
     width: 45%;
 }
 
-#others .container .card1 .person1{
+#others .container .card2 .person.second {
+    width: 236px;
+}
+
+#others .container .card1 .person.second {
+    width: 224px;
+}
+
+#others .container .card1 .person {
+    width: 236px;
     position: absolute;
-    top: 0px;
+    bottom: 0px;
     left: 0px;
-    transform: translate(-50%, 5%);
+    transform: translate(-50%, 10%);
 }
 
 #others .container .card1 .title {
@@ -571,18 +634,20 @@ a {
     flex-direction: column;
     align-items: center;
     font-size: 100px;
+    color: #fff;
+    height: 200px;
 }
 
-#others .container .card1:hover{
-    background-color: #91D2F2;
+#others .container .card1:hover {
+    background-color: #91d2f2;
 }
 
-#others .container .card1 .content{
+#others .container .card1 .content {
     font-size: 18px;
     padding: 10px 30px 10px 120px;
 }
 
-#others .container .card2{
+#others .container .card2 {
     display: flex;
     flex-direction: column;
     background-color: #fff;
@@ -592,14 +657,13 @@ a {
     width: 45%;
 }
 
-
-#others .container .card2 .person2{
+#others .container .card2 .person {
+    width: 224px;
     position: absolute;
-    top: 0px;
+    bottom: 0px;
     right: 0px;
-    transform: translate(50%, 5%);
+    transform: translate(50%, 10%);
 }
-
 
 #others .container .card2 .title {
     background: linear-gradient(#105092, #07284b);
@@ -609,13 +673,140 @@ a {
     flex-direction: column;
     align-items: center;
     font-size: 100px;
+    color: #fff;
+    height: 200px;
 }
 
-#others .container .card1:hover{
-    background-color: #91D2F2;
+#others .container .card2:hover {
+    background-color: #91d2f2;
 }
 
-#others .container .card1 .content{
+#others .container .card2 .content {
     font-size: 18px;
     padding: 10px 120px 10px 30px;
+}
+
+#others .container .card1 .content .menu {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+#others .container .card1 .content .menu .item {
+    border-radius: 40px;
+    background-color: #fff972;
+    position: relative;
+    padding-block: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#others .container .card1 .content .menu .item p {
+    position: absolute;
+    right: 15px;
+}
+
+#others .container .card2 .content .menu {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+#others .container .card2 .content .menu .item {
+    background-color: #fff972;
+    border-radius: 40px;
+    position: relative;
+    padding-block: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#others .container .card2 .content .menu .item p {
+    position: absolute;
+    right: 15px;
+}
+
+.event1 {
+    width: 492px;
+}
+
+.event2 {
+    width: 344px;
+}
+
+.ticket {
+    width: 174px;
+}
+
+.gourmet {
+    width: 130px;
+}
+
+.goods {
+    width: 408px;
+}
+
+.etc {
+    width: 148px;
+}
+
+#others .hidari {
+    position: absolute;
+    top: 0px;
+    height: 100%;
+    transform: scaleX(0.5);
+    left: -50%;
+}
+
+#others .migi {
+    position: absolute;
+    height: 100%;
+    top: 0px;
+    transform: scaleX(0.5);
+    right: -50%;
+}
+
+#others .container .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-top: 80px;
+}
+
+#others .logo {
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+}
+
+#others .logo .left-img {
+    width: 178px;
+}
+
+#others .logo .right-img {
+    width: 130px;
+}
+
+#others .logo .logo-img {
+    width: 314px;
+}
+
+#others .footer .publisher {
+    color: #fff;
+    font-size: 30px;
+    padding-inline: 100px;
+    border-radius: 30px;
+    border: 2px solid #fff;
+    margin-top: 100px;
+    margin-bottom: 60px;
+}
+
+#others .footer .copyright {
+    font-size: 12px;
+    color: #fff;
 }
